# subterfuge

./: .gitignore  Cargo.toml  README.md  main.ts
.dump/: mutated.ts
.history/: 59508main.ts
src/: checker.rs  main.rs  structs.rs  tui.rs
src/data/: savedata.json
tasks/: 01-hello_world.ts  03-length_of_arguments.ts  04-is_object_empty.ts  05-roman_to_int.ts  06-compact_object.ts  07-defang_ip_addr.ts  08-largest_num.ts  09-find_the_difference.ts  10-median_of_2_sorted_arrays.ts  10-validate_ip_address.ts  fibonacci.ts
