[package]
name = "subterfuge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
crossterm = "0.26.1"
fancy-regex = "0.13.0"
serde = "1.0.196"
serde_json = "1.0.112"
console_engine = {version="2.6.1", features = ["event", "form"]}
rand = "0.8.5"
